unpackaged/main/default/objects/Log_Event__e/Log_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event to create Log records.</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>