unpackaged/main/default/objects/Log_Event__e/fields/API_Request__c.field-meta.xml
<CustomField>
    <fullName>API_Request__c</fullName>
    <description>Contains the details about the API requests.</description>
    <label>API Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>