unpackaged/main/default/objects/Log_Event__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Contain the log level</description>
    <label>Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>