unpackaged/main/default/objects/Log_Event__e/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <description>Stores the log date.</description>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>