unpackaged/main/default/objects/Log_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Contains the log message</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>