unpackaged/main/default/objects/Log_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Contains the Id of the record</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>