unpackaged/main/default/objects/Log_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Contains the exception type</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>