unpackaged/main/default/objects/Log_Event__e/fields/User_Info__c.field-meta.xml
<CustomField>
    <fullName>User_Info__c</fullName>
    <description>Contains the user info.</description>
    <label>User Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>